<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_launcher_name">vAI Dialer</string>
    <string name="default_phone_app_prompt">Please make this app the default Phone app</string>
    <string name="allow_displaying_over_other_apps">Please allow displaying over other apps for reliable behaviour</string>
    <!-- Contacts -->
    <string name="could_not_access_contacts">Could not access your contacts</string>
    <!-- Recents -->
    <string name="no_previous_calls">No previous calls have been found</string>
    <string name="could_not_access_the_call_history">Could not access the call history</string>
    <string name="request_access">Request access</string>
    <string name="remove_confirmation">Are you sure you want to remove the selected items from the Call History?</string>
    <string name="clear_history_confirmation">Are you sure you want to remove everything from the Call History?</string>
    <string name="show_grouped_calls">Show grouped calls</string>
    <string name="clear_call_history">Clear call history</string>
    <string name="show_call_details">Show call details</string>
    <!-- Dialpad -->
    <string name="dialpad">Dialpad</string>
    <string name="asterisk">Asterisk</string>
    <string name="hashtag">Hashtag</string>
    <string name="call_number">Call number</string>
    <string name="dialpad_beeps">Enable beeps on dialpad button clicks</string>
    <string name="dialpad_vibrations">Enable vibrations on dialpad button clicks</string>
    <!-- Dialer -->
    <string name="dialer">Dialer</string>
    <string name="accept">Accept</string>
    <string name="accept_call">Accept call</string>
    <string name="decline">Decline</string>
    <string name="decline_call">Decline call</string>
    <string name="unknown_caller">Unknown Caller</string>
    <string name="is_calling">Is Calling…</string>
    <string name="dialing">Dialing…</string>
    <string name="call_ended">Call Ended</string>
    <string name="call_ending">Call Ending</string>
    <string name="ongoing_call">Ongoing Call</string>
    <string name="select_sim">Select a SIM for this call</string>
    <string name="always_use_this_sim">Always use this SIM for this number</string>
    <string name="unset_default_sim">Unset default SIM</string>
    <string name="calls">Calls</string>
    <string name="turn_microphone_on">Turn microphone on</string>
    <string name="turn_microphone_off">Turn microphone off</string>
    <string name="turn_speaker_on">Turn speaker on</string>
    <string name="turn_speaker_off">Turn speaker off</string>
    <string name="show_dialpad">Show dialpad</string>
    <string name="hide_dialpad">Hide dialpad</string>
    <string name="end_call">End call</string>
    <string name="hold_call">Hold call</string>
    <string name="resume_call">Resume call</string>
    <string name="call_on_hold">On Hold</string>
    <string name="verifying_caller">Verifying caller</string>
    <string name="verified_caller">Verified</string>
    <string name="call_swap">Swap calls</string>
    <string name="call_merge">Merge calls</string>
    <string name="call_split">Split call</string>
    <string name="call_add">Add call</string>
    <string name="conference_manage">Manage conference call</string>
    <string name="conference">Conference</string>
    <string name="audio_route_speaker">Speaker</string>
    <string name="audio_route_earpiece">Earpiece</string>
    <string name="audio_route_bluetooth">Bluetooth</string>
    <string name="audio_route_wired_headset">Wired Headset</string>
    <string name="audio_route_wired_or_earpiece">Wired or Earpiece</string>
    <string name="choose_audio_route">Choose audio route</string>
    <string name="calling_blocked_number">The number you are calling is blocked</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="switch_view">Switch View</string>
    <string name="connections">Connections</string>
    <string name="credentials">Credentials</string>
    <string name="no_connections_found">No connections found</string>
    <string name="no_credentials_found">No credentials found</string>
    <string name="credential_icon">General Credential</string>
    <!-- Speed dial -->
    <string name="speed_dial">Speed dial</string>
    <string name="manage_speed_dial">Manage speed dial</string>
    <string name="speed_dial_label">Click on a number to assign a contact to it. You can then quickly call the given contact by long pressing the given number at the dialer.</string>
    <!-- Settings -->
    <string name="group_subsequent_calls">Group subsequent calls with the same number at the call log</string>
    <string name="open_dialpad_by_default">Open the dialpad by default when the app opens</string>
    <string name="disable_proximity_sensor">Disable proximity sensor during calls</string>
    <string name="disable_swipe_to_answer">Replace swiping at responding to incoming calls with clicking</string>
    <string name="show_incoming_calls_full_screen">Always display incoming calls on full screen</string>
    <string name="hide_dialpad_numbers">Hide dialpad numbers</string>
    <string name="export_call_history">Export call history</string>
    <string name="import_call_history">Import call history</string>
    <!-- FAQ -->
    <string name="faq_1_title">I hear incoming calls, but the screen doesn\'t turn on. What can I do?</string>
    <string name="faq_1_text">Such issues can have many device and system specific reasons, hard to say in general. You should look around in your device settings and make sure that the app is allowed to pop up when in background and allow displaying over other apps.</string>
</resources>
